[package]
name = "getting-started"
version = "0.1.0"
authors = ["tamamu"]
documentation = "My Piston starter repository."
repository = "https://github.com/tamamu/piston-starter.git"
license = "MIT License"

[[bin]]
name = "gopher-benchmark"

[dependencies]
#piston = "0.26.0"
#piston2d-graphics = "0.19.0"
#pistoncore-glutin_window = "0.31.0"
#piston2d-opengl_graphics = "0.36.0"
find_folder = "0.3.0"
#piston2d-gfx_graphics = "0.33.1"
gfx_device_gl = "0.11.2"
#gfx_core = "0.4.0"
#gfx = "0.12.1"
piston_window = "0.57.0"
rand = "0.3"